--- a/src/mdx/crypto/meme.mdx
+++ b/src/mdx/crypto/meme.mdx
@@ -1,6 +1,17 @@
 import ImageRender from '../ImageRender';
 import HighlightText from '../HighlightText';
 
+## 世界资产排名
+[8marketcap](https://8marketcap.com/)
+
+## M
+$7.29M表示7,290,000美元。 "M"是"百万"的缩写，它表示数值后面有六个零，即乘以1,000,000。所以$7.29M等于$7,290,000。
+
+## B
+$1.28B
+
+$1.28B表示1,280,000,000美元。 "B"是"十亿"的缩写，它表示数值后面有九个零，即乘以1,000,000,000。所以$1.28B等于$1,280,000,000。
+
 # A-PESTO
 [地址](https://www.geckoterminal.com/solana/pools/A9KLSS9modWzMc1A189c6HXwy1QkgUupun9TPJZkhmaw)
 
@@ -35,3 +46,12 @@ https://geckoterminal.com/eth/pools/0xc555d55279023e732ccd32d812114caf5838fd46
 * <HighlightText>$0.001138-->476.71M-->4.77亿,2024.09.28 </HighlightText>
 
 <ImageRender alt='test1' width='100%' height='auto' path='/crypto/4-Neiro.png' />
+
+
+## 土狗交易
+[土狗](https://www.geckoterminal.com/)
+
+## Moodeng
+[土狗](https://www.geckoterminal.com/eth/pools/0x470dc172d6502ac930b59322ece5345dd456a03d)
+
+[土狗](https://www.geckoterminal.com/solana/pools/22WrmyTj8x2TRVQen3fxxi2r4Rn6JDHWoMTpsSmn8RUd)
