--- a/src/mdx/crypto/btc地址监控.mdx
+++ b/src/mdx/crypto/btc地址监控.mdx
@@ -6,12 +6,9 @@
 
 https://x.com/0xUnicorn/status/1805532243492061391
 
-<br/>
 ## 持仓排名
 [持仓排名](https://www.coincarp.com/zh-tw/currencies/bitcoin/richlist/)
 
-
-<br/>
 ## 大户1
 [大户1](https://bitinfocharts.com/bitcoin/address/bc1qtrxc0use4hlm7fl0j6t37z7qlwl5eppj8lywz6)
 ```
@@ -22,12 +19,9 @@ Sun Apr 28 09:52:19 CST 2024
 [大户2](https://bitinfocharts.com/bitcoin/address/36LMbBpvUHNsG1tfteuEXmpdMK408Rh8n1)
 
 
-<br/>
 ## Germany
 [Germany](https://platform.arkhamintelligence.com/explorer/entity/germany)
 
-
-<br/>
 ## 萨尔瓦多地址
 ```
 32ixEdVJWo3kmvJGMTZq5jAQVZZeuwnqzo
@@ -38,8 +32,82 @@ Sun Apr 28 09:52:57 CST 2024
 5,733.75595906 BTC
 ```
 
-<br/>
 ## 失落的钱包
 Mon May 27 19:10:57 CST 2024
 
 [失落的钱包](https://bitinfocharts.com/bitcoin/address/18eY9oWL2mkXCL1VVwPme2NMmAVhX6EfyM)
+
+
+# B.链上监控
+## B-1.quark
+[quark](https://bitatom.io/token/quark)
+
+## B-2.coinglass
+[查看爆仓数据](https://www.coinglass.com/zh/LiquidationData)
+
+[多空比](https://www.coinglass.com/zh/LongShortRatio)
+
+[查看交易所](https://www.coinglass.com/zh/exchanges)
+
+## B-3.gas查询
+[etherscan](https://etherscan.io/)
+
+## B-4.链上监控
+https://geniidata.com/flow/live-flow
+
+## B-5.rootdata
+https://www.rootdata.com/
+
+## B-6.forta
+[forta](https://forta.org)
+
+功能：监控智能合约地址和钱包地址的状态变化，并发送状态至邮箱、Slack、Discord 等通讯软件。
+
+使用场景：用户向 Forta 输入想监控的地址，并留下通知方式，便可以获得实时的链上动态，不用实时连接钱包或查看某需要关注的合约地址。
+
+## B-7.链上安全数据分析-MistTrack
+[misttrack](https://misttrack.io)
+
+功能：分析目标钱包地址的关联交易、资金流向等链上信息，综合评估地址风险，同时也能监控某地址，获得状态变化推送。
+
+使用场景：可以分析自己地址的相关信息，查看是否与风险地址交互过，分析潜在的安全隐患；在发生财产损失后，对损失财产转入地址进行查看，分析被攻击的方式，吸取教训。
+
+## B-8.ARC20交易量
+[atomicalmarket](https://atomicalmarket.com/)
+
+# C.区块链资讯
+### C-1.odaily.news
+[newsflash](https://www.odaily.news/newsflash)
+[odaily.news](https://www.odaily.news/)
+
+### C-2.实时爆仓热力图
+[LiquidationData](https://www.coinglass.com/zh/LiquidationData)
+
+### C-3.coin Glass
+[coin Glass](https://www.coinglass.com/)
+
+### C-4.foresightnews
+[foresightnews](https://foresightnews.pro/)
+
+## C-5.theblockbeats
+[theblockbeats](https://www.theblockbeats.info/news)
+
+[theblockbeats](https://www.theblockbeats.info/)
+
+### C-6.coinlive
+https://www.coinlive.com/
+
+### C-7.深潮
+[深潮精选](https://www.techflowpost.com/)
+
+### C-8.非小号
+[非小号](https://www.feixiaohao.com/news)
+
+### C-9.吴说
+[吴说](https://www.wublock123.com/)
+
+### C-10.区块客
+[区块客](https://blockcast.it/)
+
+### C-11.cointelegraph
+[cointelegraph](https://cn.cointelegraph.com/)
