feat: rename img

--- a/src/mdx/trader2/02-交易纪录.mdx
+++ b/src/mdx/trader2/02-交易纪录.mdx
@@ -5,7 +5,7 @@ import ImageRender from '../ImageRender';
 ## 1.开单瞬间
 Wed Mar  6 00:35:45 CST 2024
 
-<ImageRender alt='test1' width='50%' height='auto' path='/trader2/04-开单瞬间.jpg' />
+<ImageRender alt='test1' width='50%' height='auto' path='/trader2/04-lunaTrade.jpg' />
 
 ## 2.之前的整理
 <ImageRender alt='test1' width='50%' height='auto' path='/trader2/04-luna-2.jpg' />
@@ -53,7 +53,7 @@ Wed Mar  6 00:35:45 CST 2024
 ## 1.06-strk2-开单瞬间
 Wed Mar  6 00:34:51 CST 2024
 
-<ImageRender alt='test1' width='50%' height='auto' path='/trader2/05-strk2-开单瞬间.jpg' />
+<ImageRender alt='test1' width='50%' height='auto' path='/trader2/05-strk2-trade.jpg' />
 
 ## 2.开单结果
 <ImageRender alt='test1' width='50%' height='auto' path='/trader2/05-strk2.jpg' />
