feat: add polymarket link

--- a/src/mdx/trader2/0-择时而攻-择时而退者胜.mdx
+++ b/src/mdx/trader2/0-择时而攻-择时而退者胜.mdx
@@ -7,6 +7,9 @@ import ImageRender from '../ImageRender';
 * 权衡风险与收益，就意味着设定止损点，这是控制风险的手段；
 * 同时还意味着设定目标价位，也就是潜在的回报。目标价位的确定有多种方式，包括艾略特波浪理论、支撑位和压力位等。由于蜡烛图技术通常不能给出目标价位，我常常推荐人们将西方技术分析与蜡烛图结合起来使用。蜡烛图最擅长发出趋势反转或者趋势持续的信号，而西方技术分析工具中的回调幅度与趋势线等有助于设定目标位。当然，你也许已经有了自己的目标价位设定方法。
 
+## 赔率网站
+<LinkRender alt='赔率网站' path='https://polymarket.com/markets/all' />
+
 ### 在很多情况下，你只能拉弓等待
 请记住，在某个蜡烛图形态完成时，除非你判定风险与回报比率很诱人，否则请放弃交易。有句日本俗语所说的极是：“勇士的潜能是一张拉满的弓，但关键在于放弦的时机。”放弦的时机就取决于对风险与收益比率的研判。
 在很多情况下，你只能拉弓等待。
