--- a/src/mdx/stock/analyze.mdx
+++ b/src/mdx/stock/analyze.mdx
@@ -2,3 +2,10 @@ import LinkRender from '../LinkRender';
 
 ## 新闻1
 <LinkRender alt='longportapp新闻' path='https://longportapp.cn/zh-CN/news' />
+
+## 投资大亨持仓
+有 Warren Buffett/Ray Dalio/Cathie Wood 等多位大佬。
+
+<LinkRender alt='投资大亨持仓' path='https://stockcircle.com' />
+
+- 他们公布持仓的时候，一般已经过了最佳买入点
