--- a/src/mdx/trader2/蜡烛图新解/13-趋势.mdx
+++ b/src/mdx/trader2/蜡烛图新解/13-趋势.mdx
@@ -1,6 +1,6 @@
 import ImageRender from '../../ImageRender';
 
-## 趋势-上坡难下坡昮
+## 趋势-上坡难下坡易
 在趋势中判定价格的高低是非常重要的。也就是说，在决定新建一个仓位以前，应把当前的蜡烛图组合形态放在行情走势的大背景中来考虑。
 
 ### 顺着趋势的方向下单交易
