--- a/src/mdx/thinking/tradeThinking.mdx
+++ b/src/mdx/thinking/tradeThinking.mdx
@@ -5,7 +5,8 @@ import ImageRender from '../ImageRender';
 
 <ImageRender alt='test1' width='100%' height='auto' path='/thinking/traderBtc-2024-10.jpg' />
 
-* 2. 不要押注A股市场(并不是不能赚钱)，资本市场是个自由的市场，A股是政策市场;-Fri Oct 18 11:29:36 CST 2024
+* 2. 币圈暴富规则第一条：不在fomo时买入
+
+* 3. 不要押注A股市场(并不是不能赚钱)，资本市场是个自由的市场，A股是政策市场;-Fri Oct 18 11:29:36 CST 2024
     * 1.穷人适合小资金参与
     * 2.富人适合大资金定投国资,资源股
-
