feat: improve tech

--- a/src/mdx/thinking/tradeThinking.mdx
+++ b/src/mdx/thinking/tradeThinking.mdx
@@ -5,8 +5,11 @@ import ImageRender from '../ImageRender';
 
 <ImageRender alt='test1' width='100%' height='auto' path='/thinking/traderBtc-2024-10.jpg' />
 
-* 2. 币圈暴富规则第一条：不在fomo时买入
+* 2.币圈暴富规则第一条：不在fomo时买入
+    btc(68600-2024-10-19)今年(2024)内看见8万大概率事件,立马加仓?但是别。“投资，拼的不是趁热追涨，而是深蹲的能力。”
 
-* 3. 不要押注A股市场(并不是不能赚钱)，资本市场是个自由的市场，A股是政策市场;-Fri Oct 18 11:29:36 CST 2024
+* 3.不要押注A股市场(并不是不能赚钱)，资本市场是个自由的市场，A股是政策市场;-Fri Oct 18 11:29:36 CST 2024
     * 1.穷人适合小资金参与
     * 2.富人适合大资金定投国资,资源股
+
+* 4.多数天天盯盘的交易员亏钱的比例更高，赚大钱的更多是那些长线投资者,有信仰的价值投资者或者估值派，方向看的准确实收益丰厚
