--- a/src/mdx/trader/01-成交量-FTM.mdx
+++ b/src/mdx/trader/01-成交量-FTM.mdx
@@ -17,7 +17,7 @@ import ImageRender from '../ImageRender';
 200,000
 ```
 
-<ImageRender alt='test1' width='50%' height='auto' path='/trader2/01-ftt-0302.jpg' />
+<ImageRender alt='test1' width='50%' height='auto' path='/trader/01-ftt-0302.jpg' />
 
 ## 2. 3分钟k
 6万以上
@@ -32,13 +32,13 @@ import ImageRender from '../ImageRender';
 ## 01.涨起来之前-1hk
 1. 成交量放大
 
-<ImageRender alt='test1' width='80%' height='auto' path='/trader2/01-ftm.png' />
+<ImageRender alt='test1' width='80%' height='auto' path='/trader/01-ftm.png' />
 
 ### 1-1.15mk
-<ImageRender alt='test1' width='80%' height='auto' path='/trader2/01-ftm3.png' />
+<ImageRender alt='test1' width='80%' height='auto' path='/trader/01-ftm3.png' />
 
 ## 02.涨起来之后-1hk
-<ImageRender alt='test1' width='80%' height='auto' path='/trader2/01-ftm2.png' />
+<ImageRender alt='test1' width='80%' height='auto' path='/trader/01-ftm2.png' />
 
 ### 2-1.15mk
-<ImageRender alt='test1' width='80%' height='auto' path='/trader2/01-ftm4.png' />
+<ImageRender alt='test1' width='80%' height='auto' path='/trader/01-ftm4.png' />
