--- a/src/mdx/thinking/tradeThinking.mdx
+++ b/src/mdx/thinking/tradeThinking.mdx
@@ -1,15 +1,29 @@
 import ImageRender from '../ImageRender';
 
 ## 思考-经验
-* 1. 趋势是需要时间的，买入后必须耐心持有-Fri Oct 18 11:20:58 CST 2024
+### 1.趋势是需要时间的，买入后必须耐心持有-Fri Oct 18 11:20:58 CST 2024
+交易中有个重要的原则:不赚小钱，不亏大钱。其实非常难做到:
+
+举个例子:2W 你开了一个单，开完就涨到21000，你很开心，止盈了，赚了 5%美滋滋，结果行情一直涨到 2.5W..你赚了5%，踏空了 50%;
+然后你告诫自己要赚大钱，这次坚决不止盈，然后行情又回到了 2W，你又开了一个单，开完又涨到了21000,你告诫自己，吸取上次的教训，拿住要赚大钱，结果行情又回到了 2W 还跌破 2W 到了 19500，你止损了。
+
+很多人一辈子都在这种两难的境地中不断转换，一辈子走不出来。
+
+-那有没有大行情小行情都赚得到办法呢?
+
+-没有，必须二选一，我一般选择不赚小钱。我说的这些我并不能100%做到，也没有人可以百分百做到, 我们尽可能的去提高这个比例。
 
 <ImageRender alt='test1' width='100%' height='auto' path='/thinking/traderBtc-2024-10.jpg' />
 
-* 2.币圈暴富规则第一条：不在fomo时买入
+### 2.币圈暴富规则第一条：不在fomo时买入
     btc(68600-2024-10-19)今年(2024)内看见8万大概率事件,立马加仓?但是别。“投资，拼的不是趁热追涨，而是深蹲的能力。”
 
-* 3.不要押注A股市场(并不是不能赚钱)，资本市场是个自由的市场，A股是政策市场;-Fri Oct 18 11:29:36 CST 2024
+### 3.不要押注A股市场(并不是不能赚钱)，资本市场是个自由的市场，A股是政策市场;-Fri Oct 18 11:29:36 CST 
+Sun Oct 20 22:58:12 CST 2024
+2024
     * 1.穷人适合小资金参与
     * 2.富人适合大资金定投国资,资源股
 
-* 4.多数天天盯盘的交易员亏钱的比例更高，赚大钱的更多是那些长线投资者,有信仰的价值投资者或者估值派，方向看的准确实收益丰厚
+### 4.投资是要在保住本金的基础上保持复利
+多数天天盯盘的交易员亏钱的比例更高，赚大钱的更多是那些长线投资者,有信仰的价值投资者或者估值派，方向看的准确实收益丰厚
+投资是要在保住本金的基础上保持复利，而不是暴利。财富不是一蹴而就的，是需要用一生去学习和积累，习惯稳健的状态，保持心态健康，才能处于不败之地
