feat: add thinking

--- a/src/mdx/thinking/thinking1.mdx
+++ b/src/mdx/thinking/thinking1.mdx
@@ -1,3 +1,9 @@
+## 情绪
+强者平静如水，弱者易怒如虎，
+智者解决问题，愚者发泄情绪，
+真正厉害的人，早已戒掉了情绪，
+情绪就像心魔，你不控制它，它便吞噬。
+
 ## 但是越是没有成本的东西，往往越占用你的时间
 **很多东西，看起来没有什么成本，可以上号。**
 **但是越是没有成本的东西，往往越占用你的时间。**
