--- a/src/mdx/thinking/thinking1.mdx
+++ b/src/mdx/thinking/thinking1.mdx
@@ -4,6 +4,30 @@
 真正厉害的人，早已戒掉了情绪，
 情绪就像心魔，你不控制它，它便吞噬。
 
+## 关于职业思考
+以下只针对想一直做技术的同学:
+会不会淘汰主要原因不是来自于技术日新月异的发展 对于码农来说 只是换一套调用的api而已 干这行的大部分人看在钱的面子上都是很努力的
+
+判断是否会被淘汰应该看自身,只有稀缺性才能保证自己的地位
+
+连产出都不是,当大家都能产出的时候就容易被淘汰 
+
+比如码农,总有比你年轻的愿意拿更少的钱花比你更多的时间完成你产出的那部分,所以无论你是干技术还是管理应该做到你做的工作内容不是能被大部分人轻易替代的
+
+再直接点就是来个年轻人想抢你的饭碗,你要在领导面前主动给他碗,他都搞不定,你就是安全的
+
+你可以对照一下自己的工作内容是否是这样的,但我敢说大部分人都做不到这一点,所以大部分人也是普通人
+
+还有啊,码农是干不到四五十岁的,现在的行情三十岁后就很难啦  
+
+另外:
+正所谓混职场有三宝 得其一可风生水起  
+* 极好的同事间人际关系
+* 公司核心业务掌控力
+* 领导的好基友 
+
+可以看看前两项有多难 然后应该知道怎么做了吧
+
 ## 但是越是没有成本的东西，往往越占用你的时间
 **很多东西，看起来没有什么成本，可以上号。**
 **但是越是没有成本的东西，往往越占用你的时间。**
