--- a/src/mdx/thinking/thinking1.mdx
+++ b/src/mdx/thinking/thinking1.mdx
@@ -4,13 +4,25 @@
 真正厉害的人，早已戒掉了情绪，
 情绪就像心魔，你不控制它，它便吞噬。
 
+## 此刻-Fri Oct 25 22:45:19 CST 2024
+我在想生命的意义是什么？是账户的数字吗？
+
+为什么在为这个挣扎，争吵？
+
+乃至多年的朋友，伴侣都誓言两不相见？
+
+## Fri Oct 25 23:10:46 CST 2024
+- 不要遇到不认可的事情就否定人
+
+- 知道为什么青春期容易叛逆
+
 ## 关于职业思考
 以下只针对想一直做技术的同学:
 会不会淘汰主要原因不是来自于技术日新月异的发展 对于码农来说 只是换一套调用的api而已 干这行的大部分人看在钱的面子上都是很努力的
 
 判断是否会被淘汰应该看自身,只有稀缺性才能保证自己的地位
 
-连产出都不是,当大家都能产出的时候就容易被淘汰 
+连产出都不是,当大家都能产出的时候就容易被淘汰
 
 比如码农,总有比你年轻的愿意拿更少的钱花比你更多的时间完成你产出的那部分,所以无论你是干技术还是管理应该做到你做的工作内容不是能被大部分人轻易替代的
 
