feat: update link

--- a/src/mdx/crypto/elections.mdx
+++ b/src/mdx/crypto/elections.mdx
@@ -24,3 +24,33 @@ import LinkRender from '../LinkRender';
 * 北京时间11月6日8:00-11:00（美东时间11月5日19:00-22:00）：各州的投票站开始逐渐关闭，选票统计程序随后启动。对大选结果有决定性影响的7个摇摆州的投票站也在该时间范围内关闭，其中最快会有初步结果的州是佐治亚州和北卡罗来纳州。媒体组织根据计票结果开始报道并预测某些州的胜者。
 
 * 北京时间11月6日12:00之后（美东时间11月5日23:00之后）：随着更多州的统计结果出炉，全国范围内的选举结果逐渐明朗。但若选情胶着，可能需要等待更长时间
+
+## Article
+<LinkRender alt='关键州宾夕法尼亚' path='https://ciss.tsinghua.edu.cn/info/qb/7561' />
+
+民主党、共和党（20230101-20241008）在七大摇摆州
+* 宾夕法尼亚州 - PA
+* 密歇根州 - MI
+* 佐治亚州 - GA
+* 威斯康星州 - WI
+* 亚利桑那州 - AZ
+* 北卡罗来纳州 - NC
+* 内华达州 - NV
+
+&nbsp;&nbsp;&nbsp;&nbsp;截至2020年，美国历史上所有59届总统选举当中，有47次获胜者都赢得了宾州。[3]在过去12次大选中，有10次获胜者都赢得了宾州，向来有“得宾州者得天下”的说法。从历史上看，该州从1860至1932年间的大选除1912年外均投给了共和党。1936年在富兰克林·罗斯福领导下民主党在该州取得选举胜利。1936至1992年间，无一政党能够连续超过三届在该州赢得选举胜利。自20世纪90年代以来，宾州总体上倾向于民主党。从1992年至2012年的六次总统选举中，宾州均投票给民主党候选人。但在2016年，特朗普“美国优先”的竞选主张吸引了宾州“铁锈地带”的旧煤炭钢铁城市工薪阶层选民的共鸣，最终以0.7%的微弱优势将该州翻红，打破了自1992年以来民主党在该州的连胜纪录。2020年，宾州“斯克兰顿之子”拜登不仅在费城大获全胜，还在费城和匹兹堡周边人口稠密的郊区取得了更大优势，从而以1.2%的优势获胜。
+
+<br/>
+
+&nbsp;&nbsp;&nbsp;&nbsp;宾州被认为是2024年最重要的摇摆州。民调显示，哈里斯与特朗普在宾州的支持率非常接近，但10月以来特朗普支持率有反超哈里斯之势。根据最新民意调查（截止到10月25日），270toWin[4]、FiveThirtyEight[5]、《国会山报》（the Hill）/美国选举预测机构决策台总部（DECISION DESK HQ，简称DDHQ）[6]的民意调查平均值则显示特朗普分别以0.4%、0.3%、4%的优势领先哈里斯。而《纽约时报》[7]、《华盛顿邮报》[8]民调显示，哈里斯均以1%的优势领先特朗普。所有这些数据都在民调数据的误差范围之内，因此很难据此得出任何一方目前在选举中占据优势的结论。
+
+<br/>
+
+&nbsp;&nbsp;&nbsp;&nbsp;宾州作为大选的“决胜之地”，双方都在此积极开展竞选活动，试图争取更多选民的支持。有报道称，哈里斯在9月平均每三天就会到宾州进行竞选活动。[9]宾州对特朗普个人也意义重大。7月13日，特朗普在宾州巴特勒县（Butler）竞选集会现场遭遇枪击，引起全球的广泛关注。据统计，特朗普自9月至10月上旬已在宾州进行了9场竞选活动。同时，为凸显宾州在美国2024年大选重要性，“哈特辩论”于9月10日在宾州费城举行。此外，民主党和共和党在宾州的政治广告上支出分别高达1.8和 1.7亿美元，远远超过其他战场州的支出，可见宾州对两党候选人的重要性。[10]
+
+<br/>
+
+&nbsp;&nbsp;&nbsp;&nbsp;根据笔者统计，宾州67个县中有53个县至少在近3次大选（2012-2020）连续投共和党，他们多集中在该州中部、北部和西部的广大农村地区。其中34个县连续12次（1976-2020）大选均投共和党，这些地区长期以来被认为是美国最保守的地区。与此同时，该州有10个县至少在近3次大选连续选择民主党，他们多分布在该州东南部的费城、西南部的匹兹堡以及东北部的斯克兰顿等人口众多的城市地区，其中费城是唯一一个连续12次均支持民主党的县。当然，以上政治立场相对稳定的63个县并非选情焦点，相比之下，那些近期政治立场不甚鲜明的伊利县（Erie）、北安普敦县（Northampton）、卢泽恩县（Luzerne）、切斯特县（Chester），由于选民的政治偏好相对分散或存在变化，其选举结果难以预测，对整体选举结果具有重要影响，更值得关注。特别是伊利县和北安普敦县自1992年以来均是民主党坚定支持者，但在2016年翻红后又在2020年翻蓝，与宾州选举趋势高度重合，被称为“风向标州的风向标地区”。[11]
+
+<br/>
+
+&nbsp;&nbsp;&nbsp;&nbsp;宾州被广泛视为2024年大选最关键的战场之一，拥有比其他任何战场都多的选举人票，也通常会选出最终获胜者。无论是哈里斯还是特朗普，如果无法赢得宾州，就很难赢的全国选举。
