--- a/src/mdx/crypto/elections.mdx
+++ b/src/mdx/crypto/elections.mdx
@@ -1,6 +1,10 @@
 import LinkRender from '../LinkRender';
 
 ## Link
+<LinkRender alt='美联社' path='https://apnews.com/' />
+
+<br/>
+
 <LinkRender alt='CNN' path='https://edition.cnn.com/election/2024/electoral-college-map?game-id=2024-PG-CNN-ratings&game-view=map' />
 
 <br/>
@@ -14,6 +18,8 @@ import LinkRender from '../LinkRender';
 <br/>
 
 <LinkRender alt='Election' path='https://www.wsj.com/election/2024/general/president' />
+
+<LinkRender alt='elections赔率' path='https://kalshi.com/markets/pres/presidential-elections' />
 
 <br/>
 
