feat: add thinking

--- a/src/mdx/thinking/thinking1.mdx
+++ b/src/mdx/thinking/thinking1.mdx
@@ -1,8 +1,12 @@
+import ImageRender from '../ImageRender';
+
 ## 情绪
 强者平静如水，弱者易怒如虎，
 智者解决问题，愚者发泄情绪，
 真正厉害的人，早已戒掉了情绪，
 情绪就像心魔，你不控制它，它便吞噬。
+
+<ImageRender alt='test1' width='70%' height='auto' path='/lift-learning.png' />
 
 ## 此刻-Fri Oct 25 22:45:19 CST 2024
 我在想生命的意义是什么？是账户的数字吗？
