feat: remve real btc trade

--- a/src/mdx/trader/00-市场永远不会错.mdx
+++ b/src/mdx/trader/00-市场永远不会错.mdx
@@ -1,6 +1,9 @@
 import LinkRender from '../LinkRender';
 import HighlightText from '../HighlightText';
 
+## 股票大作手回忆录
+<LinkRender alt='股票大作手回忆录' path='https://www.htqhedu.com/upload/1490865257434.pdf' />
+
 ## 交易的钱是很难赚:
 * 1.兴趣过滤一大批人
 * 2.所有的坑都得亲自踩，交易是不能由人带的
