feat: add furture thinking

--- a/src/mdx/thinking/banFurture.mdx
+++ b/src/mdx/thinking/banFurture.mdx
@@ -5,6 +5,10 @@ import ImageRender from '../ImageRender';
 
 在我的交易经历中，通过合约的盈利最终都亏回去。合约的过程：放大赌性，再拉大杠杆，增加交易频率，最终亏掉本金。
 
+## aboutFurture
+
+<ImageRender alt='test1' width='50%' height='auto' path='/thinking/aboutFurture.png' />
+
 ### 1.关于合约-人性负面:
 首先，合约交易非常放大人性负面，一旦有了被赌性控制，就接连亏损，甚至破产。
 1. 亏了，你会放大杠杆想回本，频繁交易，越做越错。
