feat: update thinking

--- a/src/mdx/thinking/thinking1.mdx
+++ b/src/mdx/thinking/thinking1.mdx
@@ -44,6 +44,15 @@ import ImageRender from '../ImageRender';
 
 可以看看前两项有多难 然后应该知道怎么做了吧
 
+## 破局
+实际上真的给你有挑战性的工作，你也只能百度谷歌抄别人的方案挨个试，能解决就解决，解决不了就解决不了，真的要从问题里成长，还是要花自己的时间研究。
+
+如果你真有行动力，挑战很容易，随便想一个问题，然后开始动手就行了，最重要的是行动！虽然你没有实际真实项目的经验，但是你学到的知识绝对足够让你找一个更好的工作。
+
+下班累的不想学习这个真不能做借口，大家都很累，但是就是有人能坚持学习，差距就是这么产生的。
+
+你说租很远的房子，通勤时间很长。那地铁上那么多人看学习视频、背单词之类的，你也可以想办法把通勤时间利用起来。
+
 ## 但是越是没有成本的东西，往往越占用你的时间
 **很多东西，看起来没有什么成本，可以上号。**
 **但是越是没有成本的东西，往往越占用你的时间。**
@@ -71,3 +80,17 @@ Thu Mar  7 21:42:52 CST 2024
 ## Sat Mar  9 21:02:47 CST 2024
 记辛苦的日子
 - 谋大事者，需懂得割舍
+
+## Wed Feb 12 15:08:39 CST 2025
+技术一定要学，自己迭代自己的技术，你扪心自问，你的技术是不是学习 1 年然后重复 4 年。
+
+出来混，最重要的是，“先出来”。先做先学，总有机会。
+
+还有就是建议:
+1. 一具体就深刻，不要讲宏观叙事
+> 通辽狠人的共性就是执行力强，不得志的人通常是非傲即惰。你找宏观原因背锅，然后呢，你还不是只能安于现状。
+具体执行了才是改变的第一步
+
+2. 一个行业一定是有两套准则的，当面一套，背地一套。所以我的偏见是，抄！啥好的东西我就抄，我认清自己的能力不可能研发新的组件库、新的框架，所以我就抄！抄来就是自己的。道德是约束自己的，不是约束别人的。认清这一点，我就是别人口中最无赖的“温故而知新”的那群小笔崽子。
+
+3. 财富是有限的，只会转移，不会创造。所以你要做的上法律内，连哄带骗，把别人的钱、别人的岗位、别人的资源骗到自己的来，然后洗白了就是自己的。
