--- a/src/mdx/crypto/btcBelievers.mdx
+++ b/src/mdx/crypto/btcBelievers.mdx
@@ -1,5 +1,5 @@
-import LinkRender from '../LinkRender';
-import ImageRender from '../ImageRender';
+import LinkRender from '../../components/LinkRender';
+import ImageRender from '../../components/ImageRender';
 
 ## btc 分析
 文章写于2024-02-19 23:42
