--- a/src/mdx/crypto/btcUniqueDiversifier.mdx
+++ b/src/mdx/crypto/btcUniqueDiversifier.mdx
@@ -1,5 +1,5 @@
-import LinkRender from '../LinkRender';
-import ImageRender from '../ImageRender';
+import LinkRender from '../../components/LinkRender';
+import ImageRender from '../../components/ImageRender';
 
 # btc: A Unique Diversifier
 2024-9-19 <LinkRender alt='参考' path='https://www.blackrock.com/us/financial-professionals/literature/whitepaper/bitcoin-a-unique-diversifier.pdf' />
