--- a/src/mdx/crypto/btc地址监控.mdx
+++ b/src/mdx/crypto/btc地址监控.mdx
@@ -1,4 +1,4 @@
-import LinkRender from '../LinkRender';
+import LinkRender from '../../components/LinkRender';
 
 ## cryptocurrency-ownership-data
 https://www.triple-a.io/cryptocurrency-ownership-data
