--- a/src/mdx/stock/analyze.mdx
+++ b/src/mdx/stock/analyze.mdx
@@ -1,4 +1,4 @@
-import LinkRender from '../LinkRender';
+import LinkRender from '../../components/LinkRender';
 
 ## 新闻1
 <LinkRender alt='longportapp新闻' path='https://longportapp.cn/zh-CN/news' />
