--- a/src/mdx/thinking/banFurture.mdx
+++ b/src/mdx/thinking/banFurture.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../ImageRender';
+import ImageRender from '../../components/ImageRender';
 
 ## 做交易想赚钱首先要禁止做合约交易
 >年轻的朋友们有一天终于会明白——这个社会上，什么都会有代价的；看上去没有代价的东西、唾手可得的东西，基本是陷阱。
