--- a/src/mdx/thinking/btcTradeExperience.mdx
+++ b/src/mdx/thinking/btcTradeExperience.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../ImageRender';
+import ImageRender from '../../components/ImageRender';
 
 ## btc Trade Experience
 Wed Nov 13 22:55:20 CST 2024
