--- a/src/mdx/thinking/invest.mdx
+++ b/src/mdx/thinking/invest.mdx
@@ -1,23 +1,250 @@
+import CodeBlock from '../../components/codeBlock';
+import ImageRender from '../../components/ImageRender';
+import HighlightText from '../../components/HighlightText';
 
-## A股
-A股怎么走？
+## 期权是什么
+首先我们来解释下期权的概念。
 
-重点不要看国内软件，盯住纳斯达克中国金龙指数,外资+二代比普通老百姓消息灵通。
+期权是交易的买卖双方的一类约定：
 
-* 比如说金龙指数第一次跳空高开在2024-9月19日。
-* 全面3连环央行放大招是在9月24日，资金为王，资金永远先于消息，而消息很多时候，是别人想让你看到的消息。
+买方支付给卖方一笔手续费，约定在一个数字货币在一定时间范围内达到某个指定价格的时候可以进行买入或卖出这个数字货币。
 
-目前这种逼空行情，会积累大量获利盘，本质是不健康的。你要知道海外是可以做空的。
-所以多空的利润,巨量逼空，量能特别重要，一开始是量价齐升，然后出现天量，5日均量还会持续惯性滑行，但量能一旦见顶，加速度就会降低，量会先行，价会随后。
+这里期权的合约有四个关键概念：
+1. 锚定数字货币 underlying asset
 
-然后要观察金龙指数数据以及核心成分股，比如京东，百度，阿里巴巴，以及新能源汽车新势力。它们的动作，往往具有前瞻和引导性。一旦开始转向，走为上策
+2. 期权的权利金 premium
 
-[HXC-US](https://www.futunn.com/stock/.HXC-US)
+3. 交易时间期限 Time to maturity
+
+4. 货币的约定价 Strike price
+
+举个例子：
+<CodeBlock>
+```text
+锚定的数字货币是BTC
+
+手续费是1500USDT
+
+交易期限为一个月
+
+约定价为56000USDT
+```
+</CodeBlock>
+
+<br/>
+
+#### 买方给卖方支付1500USDT的权利金并约定：
+
+在一个月内，买方可以选则用56000元的价格从卖方买入1个比特币。这就是一个BTC的看涨期权，买方做多一个BTC的看涨期权而卖方做空一个BTC的看涨期权。
+
+在看涨期权的情况下，我们把权利金记为C，BTC的可能的价格记为S，约定价格记为K，权利金记为C，则买方的根据BTC价格变化的损益函数如下图：
+
+<ImageRender alt='options1' width='100%' height='auto' path='/thinking/options1.png' />
+
+损益函数为 P&L = max(S-K, 0) - C
+
+当BTC的价格"S>=K"时，这张期权成为价内期权，买方选择行权是划算的。当 "S < K" 时，这张期权是价外期权，买方选择不行权是最优选择，因为最大亏损就是权利金C而已。当BTC的价格"S>=K+C"时，买方的收益为正，否则买方收益为负。
+
+<br/>
+反观卖方，他的损益图为：
+<ImageRender alt='options2' width='100%' height='auto' path='/thinking/options2.png' />
+
+<HighlightText>
+正好和买方相反，因为期权是个买卖双方的一个零和博弈。
+</HighlightText>
+
+损益函数为 P&L = min(K-S, 0) + C。
+
+当BTC价格"S< = K+C"的时候，卖方收益为正，否则收益为负。
+
+<br/>
+
+#### 期权卖方
+为啥有人会选择当期权的卖方呢？买方有这么大权利，当卖方不是肯定吃亏嘛？
+
+其实并不然，当卖方有权利金可拿，而且大多数时候当卖方还有自己的小算盘。
 
 
-# B.双币投资
+<HighlightText color='blue'>
+1. 做空看涨期权 = 挂卖出限价单 + 收利息
+</HighlightText>
+<CodeBlock>
+```text
+当卖方本身持有BTC的时候，他卖空一个BTC的看涨期权，等价于一个止盈的操作。
+比方说他本身是在BTC在20000 USDT时买入的，然后一直持有，挂一个56000 USDT的限价单，等着哪天交易完成获利。
+这时候做空一张BTC的看涨期权不仅等价于挂了上面的一个限价单，
+而且还收了未完成交易前时间段的利息，就是这里的权利金。
+```
+</CodeBlock>
+
+
+<HighlightText color='blue'>
+2. 做空看跌期权 = 挂抄低限价单 + 收利息
+</HighlightText>
+
+<CodeBlock>
+```text
+如果一个人手上有大量USDT的闲钱，想找个机会抄低BTC。
+
+他可以挂一个30000 USDT的限价单，但这个限价单可能很长时间不会成交，那这段时间傻傻的持有USDT是不划算的。
+此时如果卖空一张约定价是30000 USDT的BTC看跌期权就比单单挂一个30000 USDT价格的买入限价单划算，
+哪怕抄低不成功还能收权利金当利息。
+```
+</CodeBlock>
+
+### 总结
+
+做卖权的业绩曲线都很稳定，主要就是因为期权卖方的胜率很高，甚至能达到90%以上。
+
+卖权无非就是卖出期权（看涨或看跌等），然后赚取权利金，但如果你对期权有了解就会明白，卖权的风险非常高。
+
+<CodeBlock>
+```text
+举个例子，假设大明不看好A标的，卖给小明一张A看涨期权，现价1000元，1个月后的执行价是1100元，权利金50元。
+
+也就是说，小明有权在1个月后选择是否行权，即是否用1100元买入A，若小明选择行权，那无论A的市价多少，
+大明都要以1100元的价格卖给小明
+```
+</CodeBlock>
+
+1. 若3个月后A的价格低于1100元，假设市价1010元，则小明不会行权，小明可以选择不行权，这意味着他不以1100元买入A，但这不意味着他必须在市场上以1010元买入A;大明顺利赚取50元权利金；
+2. 若3个月后A的价格高于1100元，假设市价1110元，则小明会行权，大明将自己手中的A以执行价1100元卖给小明，那大明赚取：1.大明从小明那里收到了50元的权利金。2.大明卖出了自己持有的A，价格是1100元的收益
+  小明的盈利就是10元的价格收益，即市场价和执行价之间的差价。
+3. 若3个月后A的价格高于1100元，假设市价1200元，则小明会行权，
+大明没有A标的物，他仍然可以卖出期权，这种情况称为“裸卖期权”, 大明先花1200元买入A，再以1100元卖给小明，那大明赚取：（1100-1200）+50（权利金）=-50元，即亏了50元；
+<CodeBlock>
+```text
+卖出覆盖期权:
+如果大明已经持有A，那么他就可以以自己拥有的A作为保障，卖出期权。
+即使小明行使期权，大明也可以直接将A以执行价格卖给小明，这时大明不会面临需要去市场购买A的风险。
+```
+</CodeBlock>
+4. 如果遇到极端行情，比如3个月后A涨到了5000元，则小明会行权，大明先花5000元买入A，再以1100元卖给小明，那大明赚取：（1100-5000）+50（权利金）=-3850元，即亏了3850元；
+<CodeBlock>
+```text
+裸卖期权优势：
+1.可以赚取更多的权利金：
+
+2.可能的短期盈利：
+如果期权到期时A的市场价格未突破执行价（即小明不行权），大明将完全赚取权利金，
+而不需要承担买入标的物的风险。
+
+风险：
+无限亏损的风险
+```
+</CodeBlock>
+
+### 裸卖期权和卖出覆盖期权
+在美股市场中，卖出覆盖期权（covered calls）通常比裸卖期权（naked options selling）更加普遍和受欢迎
+- 卖出覆盖期权在零售投资者和机构投资者中都非常普遍。很多投资者使用这种策略来增加现有股票仓位的收益。
+- 卖出覆盖期权意味着投资者已经拥有基础资产（如股票），然后卖出该股票的看涨期权（call option）。这样做的目的是赚取期权的权利金收入。如果期权被行使，投资者必须以执行价卖出股票，但他们已经赚取了权利金，这可以作为一种额外的收益。
+- 风险管理：因为投资者已经持有标的资产，卖出期权的风险被相对限制。如果股票价格上涨，投资者可能会错过进一步的涨幅，但至少有权利金收入补偿。如果股票价格下跌，投资者会承受股票价格下跌的损失，但这也是持有股票的风险之一。
+<br/>
+卖权具有明显的<HighlightText> 收益有限、风险无限”</HighlightText>的特点。
+
+所以很多私募并不是完全做卖权，而是会做一些保护，主要的保护措施基本也就两种：
+1. 做的期权品种足够分散，进而分散风险；
+2. 通过其他衍生品来构建不同的组合，以对冲风险，比如当期权即将从虚值转为平值时，可以通过买入相应的期货进行对冲等。
+
+<br/>
+买权刚好与卖权相反，具有<HighlightText>“收益无限、风险有限”</HighlightText>
+的特点，但是买权的胜率非常低，不过赔率也非常高，一旦碰上一波行情，翻几十倍、几百倍的可能性都有。
+
+<br/>
+特点：
+- 卖方确实连续几个月走慢悠悠的上坡曲线，但是一旦来个一波流就只能拜拜了。
+- 只要时间足够长，一定会碰到黑天鹅
+- short call比short put还不靠谱，看历史来讲短时间大幅上涨的概率会比大幅下跌要高
+
+- 欧式期权:
+- 美式期权:美式期权
+
+## 加密货币的期权
+币安：
+提供BTC期权交易，包括看涨期权和看跌期权，但目前币安没有明确提供“卖出覆盖期权”的策略。不过，用户可以自己通过期权市场卖出BTC看涨期权来实现类似的覆盖期权策略。
+
+如何做卖出覆盖期权：
+- 你可以通过币安的期权平台选择卖出BTC的看涨期权（Call Option），并持有一定量的比特币作为保证金，这样如果期权被行使，你就以执行价卖出比特币。
+步骤：
+1. 在币安购买一定数量的BTC。
+2. 使用币安期权平台卖出BTC看涨期权（例如BTC/USDT的看涨期权）。
+3. 收取期权的权利金。
+4. 如果BTC的价格上涨至执行价以上，你将被要求按执行价卖出BTC；如果价格不上涨，你就保留BTC并获得期权权利金。
+
+### 看涨期权
+<CodeBlock>
+```text
+买进BTC 98,000.0 看涨期权
+到期日 2025-02-28
+数量 (张) 5
+价格 1100
+总成本 5,619.6085 USDT
+你将付出 5,619.6085 USDT 来拥有期权，这张期权能让你在2025-02-28用98000.0买进5.00BTC。
+如果BTC价格在2025-02-28高于98000.0，您将获得行权收益。
+如果BTC价格在2025-02-28到期时低于98000.0，这张期权将失去价值
+```
+</CodeBlock>
+期权类型：
+* 这是一个买进看涨期权，允许你在2025年2月28日，以98000.0 USDT的价格购买5 BTC。你为此支付了5,619.6085 USDT的权利金。即，你支付了一定金额来获得在未来某一日期（2025-02-28）购买BTC的权利。
+* 行权收益：
+如果到期时，BTC的市场价格高于98000.0 USDT，你可以以执行价（98000.0 USDT）购买5 BTC，并可以根据市场价格卖出获得利润。例如，如果到期时BTC价格为110000.0 USDT，你将有5 BTC的差价收益。
+
+权利金支付时间：
+* 你支付的权利金（在你的例子中是5,619.6085 USDT）是在你购买期权时支付的。你立即支付这笔费用以获得购买期权的权利。
+* 卖方（期权的发行者）会在你支付权利金后立即收到这笔费用。这意味着你一支付，卖方就会收到你支付的权利金。
+
+你是期权的买方:
+- 你支付权利金来购买期权，并有权在到期时以98000.0 USDT的价格购买BTC。
+- 期权失效：如果到期时，BTC的市场价格低于执行价98000.0 USDT，那么你的期权将失去价值，你将损失支付的权利金5,619.6085 USDT。
+
+卖方如何收到权利金：
+* 卖方（期权的发行者）会在你购买期权并支付费用后立即收到这笔权利金。卖方无论是否行使期权，都会保留这笔费用。换句话说，卖方的收益即为你支付的权利金（无论最终你是否行使期权）。
+
+期权到期时的情况：
+* 如果期权到期时你没有行使期权（即市场价格低于期权执行价格），你将失去这笔权利金，卖方则保留该费用。
+* 如果你选择行使期权（即市场价格高于执行价格），你将按执行价格购买标的资产（在你的例子中是BTC），并根据市场价格的差异获得盈利。
+
+- 如果BTC价格在期权到期时正好为98000 USDT，你没有盈利，但你仍然损失了5,619.6085 USDT（即你支付的权利金）。
+- 如果到期时BTC的价格达到了100,000 USDT
+  - 每个BTC的差价 = 市场价格 - 行权价格 = 100,000 - 98,000 = 2,000 USDT。
+  - 总盈利 = 2,000 USDT * 5 BTC = 10,000 USDT。
+  - 净盈利 = 总盈利 - 支付的权利金 = 10,000 USDT - 5,619.6085 USDT = 4,380.3915 USDT。
+
+
+### 看跌期权
+<CodeBlock>
+```text
+买进BTC 99,000.0 看跌期权
+到期日 2025-02-24
+数量 (张) 5.00
+价格 2,710.0
+总成本 13,694.4865 USDT
+你将付出 13,694.4865 USDT 来拥有期权，这张期权能让你在2025-02-24用99000.0卖出5.00BTC。
+如果BTC价格在2025-02-24低于99000.0，您将获得行权收益。
+如果BTC价格在2025-02-24到期时高于99000.0，这张期权将失去价值
+```
+</CodeBlock>
+此刻你还是期权买方：
+* 期权买方是支付权利金的一方，在购买期权时你支付了13,694.4865 USDT，以获得在未来某个时间（到期日）根据期权的条款行使权利的机会。
+* 在你的例子中，你购买的是看跌期权（Put Option），意味着你有权在2025年2月24日以99,000 USDT的价格卖出5个BTC。
+* 如果到期时BTC的市场价格低于执行价格99,000 USDT，你可以通过行使期权来盈利（卖出5个BTC并获得差价）。
+* 如果到期时BTC的市场价格高于执行价格99,000 USDT，你将失去权利金，因为期权将变得没有价值，你选择不行使期权。
+
+盈亏平衡点市场价格:
+- 盈亏平衡点市场价格=执行价格−每个BTC的差价=99,000−2,738.8973=96,261.1027USDT
+
+假设BTC价格下跌至90,000 USDT：
+* 总盈利 = 9,000 USDT * 5 BTC = 45,000 USDT。
+  - 净盈利 = 总盈利 - 支付的权利金 = 45,000 USDT - 13,694.4865 USDT = 31,305.5135 USDT。
+
 ## B-1.什么是双币投资？
-一种加密货币资产的衍生产品。
+<CodeBlock>
+```text
+决定卖空期权亏，关键在于选择适合的约定价格和对应的权利金。此时引出双币理财就比较合适了。
+```
+</CodeBlock>
+
+知道当期权的空方来完成我们自己的一些限价单+收利息是个不错的选择，我们就可以根据自己的需要来选择市面上的双币理财产品。
 
 在币安，你可以使用 BTC、BUSD、USDT 等加密货币做申购，这个产品具有期限，在到期日时会返回承诺利息，
 
@@ -43,12 +270,65 @@ A股怎么走？
 * 如果价格达到预期：「价差收益+ 利息」
 * 如果价格没达预期：「本金 100% 退还+ 利息」
 
-## B-2.双币投资的投资风险
-* 1.BTC 价格飙涨的风险（机会成本）：
+<br/>
+
+#### 双币理财都是一个数字货币和一个稳定币的交易对我们以BTC和USDT来举例。
+1. 做空看涨期权类双币理财
+
+手上持有BTC，约定价为K，当BTC的价格高于K时，你在理财到期日会持有K+C的USDT。当BTC价格低于K时，你会持有原来的BTC和C的权利金。
+
+<ImageRender alt='options3' width='100%' height='auto' path='/thinking/options3.png' />
+
+损益图如上，此时K=56000 USDT。这里理财的亏损风险在于BTC一直上涨，但没法获得对应价格上涨的收益，但如果不贪心，在便宜的时候买入了BTC，在56000时候卖出也是不错的选择。
+
+2. 做空看跌期权类双币理财
+手上持有USDT，约定价为K，当BTC的价格高于K时，你在理财到期日会持有原本的USDT和C的权利金。当BTC价格低于K时，你会以K价格买入BTC。
+
+<ImageRender alt='options4' width='100%' height='auto' path='/thinking/options4.png' />
+
+损益图如上，此时K=30000 USDT。这里亏损风险主要在于BTC持续下跌，卖方在30000 USDT时抄底后BTC继续下跌，币价低于买入的价格。但如果本来看好BTC，相信以后还会涨回30000 USDT以上的话还是划算的。
+
+<CodeBlock>
+```text
+总结，双币理财并不是个低风险高收益的产品，他把有风险的部分隐藏在了非稳定币的币价的波动里。
+
+在不了解期权的逻辑的情况下盲目去尝试这类产品是会造成预期外风险的。
+
+如果本身已经对做空看涨看跌期权有一定认知，能利用止盈抄底的逻辑顺带赚一波利息的话，这类理财产品还是值得尝试的。
+```
+</CodeBlock>
+
+
+
+<HighlightText>
+### 双币投资的投资风险
+</HighlightText>
+记住：一切收益都是风险的代偿。
+市场总体是公平的，一分风险一分价钱。对于买方和卖方都是如此。其实并不存在卖方和买方哪方更好的说法
+
+* 卖权具有明显的“收益有限、风险无限”
+* 发生币对成交玩家就会亏损
+* BTC 价格飙涨的风险（机会成本）：
   >假设今天 BTC 的价格涨幅远远超过 12500，来到 20000，你就少赚了 12500 -> 20000 这段的价差。
-* 2.BTC 价格跌幅的风险：
+* BTC 价格跌幅的风险：
   >又或者 BTC 不升反跌，你的资金被锁在双币投资当中，没机会换成其他资产，等于赚了利息赔了价差。
-* 3.流动性风险（机会成本）：
+* 流动性风险（机会成本）：
   >如果今天出现更好投资标的，例如利率更好的双币投资，申购期间是不允许违约提前领回的，那么你就失去了赚更多利息的机会。
-* 4.交易所风险：
->若币安本身出现了资金周转危机，双币投资也有可能面临违约风险，但机率不大。
+* 交易所风险：若币安本身出现了资金周转危机，双币投资也有可能面临违约风险，但机率不大。
+
+利息的来源就是你卖出期权的权利金，高卖就是卖call。
+
+段永平作为拼多多股东，手里有大量的股票现货仓位，就会不断选择卖call，去年他曾晒单卖call拼多多一次赚了340万刀。
+
+## A股
+A股怎么走？
+
+重点不要看国内软件，盯住纳斯达克中国金龙指数,外资+二代比普通老百姓消息灵通。
+
+* 比如说金龙指数第一次跳空高开在2024-9月19日。
+* 全面3连环央行放大招是在9月24日，资金为王，资金永远先于消息，而消息很多时候，是别人想让你看到的消息。
+
+目前这种逼空行情，会积累大量获利盘，本质是不健康的。你要知道海外是可以做空的。
+所以多空的利润,巨量逼空，量能特别重要，一开始是量价齐升，然后出现天量，5日均量还会持续惯性滑行，但量能一旦见顶，加速度就会降低，量会先行，价会随后。
+
+然后要观察金龙指数数据以及核心成分股，比如京东，百度，阿里巴巴，以及新能源汽车新势力。它们的动作，往往具有前瞻和引导性。一旦开始转向，走为上策
