--- a/src/mdx/thinking/thinking1.mdx
+++ b/src/mdx/thinking/thinking1.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../ImageRender';
+import ImageRender from '../../components/ImageRender';
 
 ## 情绪
 强者平静如水，弱者易怒如虎，
@@ -94,3 +94,8 @@ Thu Mar  7 21:42:52 CST 2024
 2. 一个行业一定是有两套准则的，当面一套，背地一套。所以我的偏见是，抄！啥好的东西我就抄，我认清自己的能力不可能研发新的组件库、新的框架，所以我就抄！抄来就是自己的。道德是约束自己的，不是约束别人的。认清这一点，我就是别人口中最无赖的“温故而知新”的那群小笔崽子。
 
 3. 财富是有限的，只会转移，不会创造。所以你要做的上法律内，连哄带骗，把别人的钱、别人的岗位、别人的资源骗到自己的来，然后洗白了就是自己的。
+
+## Wed Feb 12 17:30:39 CST 2025
+职业建议:
+如果可以通过解雇你来节省开支,他们会毫不犹豫这么做。如果你有机会让自己变得更好,也要毫不犹豫这么做。
+
