--- a/src/mdx/thinking/tradeThinking.mdx
+++ b/src/mdx/thinking/tradeThinking.mdx
@@ -1,5 +1,5 @@
-import ImageRender from '../ImageRender';
-import HighlightText from '../HighlightText';
+import ImageRender from '../../components/ImageRender';
+import HighlightText from '../../components/HighlightText';
 
 ## 巴菲特2024.11.25股东信 
 Wed Nov 27 22:14:57 CST 2024
