--- a/src/mdx/trader/0-择时而攻-择时而退者胜.mdx
+++ b/src/mdx/trader/0-择时而攻-择时而退者胜.mdx
@@ -1,5 +1,5 @@
-import ImageRender from '../ImageRender';
-import LinkRender from '../LinkRender';
+import ImageRender from '../../components/ImageRender';
+import LinkRender from '../../components/LinkRender';
 
 ## 择时而攻,择时而退者胜
 “耐心等待时间之窗的开启；耐心是交易者成功的最重要的品性。”这就是说，理想的蜡烛图形态出现时，并不意味着最佳交易时机已来临。
