--- a/src/mdx/trader/00-市场永远不会错.mdx
+++ b/src/mdx/trader/00-市场永远不会错.mdx
@@ -1,5 +1,5 @@
-import LinkRender from '../LinkRender';
-import HighlightText from '../HighlightText';
+import LinkRender from '../../components/LinkRender';
+import HighlightText from '../../components/HighlightText';
 
 ## 股票大作手回忆录
 <LinkRender alt='股票大作手回忆录' path='https://www.htqhedu.com/upload/1490865257434.pdf' />
