--- a/src/mdx/trader/00-止损.mdx
+++ b/src/mdx/trader/00-止损.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../ImageRender';
+import ImageRender from '../../components/ImageRender';
 
 ## 学会止损交易才算入门
 不会止损，无法持续盈利。最终的结果是在心态奔溃下亏光或则无奈退出市场。
