--- a/src/mdx/trader/蜡烛图技术/02-十字线.mdx
+++ b/src/mdx/trader/蜡烛图技术/02-十字线.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 十字线
 十字线甚至没有实体。在这种极端情况下，蜡烛线的实体实际上缩小为一根水平横线了。
