--- a/src/mdx/trader/蜡烛图技术/03-纺锤线.mdx
+++ b/src/mdx/trader/蜡烛图技术/03-纺锤线.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 纺锤线 
 既然长白线和长黑线代表着一边倒的单边行情，那么当实体缩小时，我们就能得到线索，之前的行情势头或许正在减缓。
