--- a/src/mdx/trader/蜡烛图技术/04-伞形线之锤子线.mdx
+++ b/src/mdx/trader/蜡烛图技术/04-伞形线之锤子线.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 伞形线
 它们的下影线较长，而实体(或黑或白)较小，并且在其全天价格区间里，实体所处的位置接近顶端。
