--- a/src/mdx/trader/蜡烛图技术/05-伞形线之上吊线.mdx
+++ b/src/mdx/trader/蜡烛图技术/05-伞形线之上吊线.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 1.上吊线
 上吊线的形状与锤子线相同，唯一区别是，上吊线出现在上涨行情之后。因为长下影线具有增强功效的作用，而上吊线有这样的长下影线。
