--- a/src/mdx/trader/蜡烛图技术/06-吞没形态.mdx
+++ b/src/mdx/trader/蜡烛图技术/06-吞没形态.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 吞没形态
 在绝大多数情况下蜡烛图技术信号都是由数根蜡烛线组合在一起形成的。吞没形态是我们将介绍的第一类由数根蜡烛线组成的组合形态。吞没形态属于主要的反转形态，由两根颜色相反的蜡烛线实体构成。
