--- a/src/mdx/trader/蜡烛图技术/08-刺透形态.mdx
+++ b/src/mdx/trader/蜡烛图技术/08-刺透形态.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 刺透形态
 与乌云盖顶形态相反的形态，它的名称为刺透形态(如图4.26所示)。刺透形态出现在下跌的市场上，也是由两根蜡烛线所组成的。
