--- a/src/mdx/trader/蜡烛图技术/09-星线.mdx
+++ b/src/mdx/trader/蜡烛图技术/09-星线.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 星线
 实体较小(可以是白色，也可以是黑色)，并且在它的实体与它前面较大的蜡烛线实体之间形成了价格跳空。<br/>
