--- a/src/mdx/trader/蜡烛图技术/11-星线-启明星.mdx
+++ b/src/mdx/trader/蜡烛图技术/11-星线-启明星.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 启明星-底部反转形态
 本形态由三根蜡烛线组成:
