--- a/src/mdx/trader/蜡烛图技术/11-星线-流星-倒锤线.mdx
+++ b/src/mdx/trader/蜡烛图技术/11-星线-流星-倒锤线.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 1.流星和倒锤线
 具有较小的实体，而且实 体处于其价格区间的下端，同时，流星线的上影线较长。
