--- a/src/mdx/trader/蜡烛图技术/12-孕线.mdx
+++ b/src/mdx/trader/蜡烛图技术/12-孕线.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 1.孕线
 纺锤线(即小实体的蜡烛线)是特定蜡烛线形态的组成部分。孕线形态就是这些形态中的一个例子
