--- a/src/mdx/trader/蜡烛图技术/13-平头顶部-平头底部.mdx
+++ b/src/mdx/trader/蜡烛图技术/13-平头顶部-平头底部.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 平头顶部和平头底部
 平头形态是由几乎具有相同水平的最高点的两根蜡烛线组成的， 或者是由几乎具有相同的最低点的两根蜡烛线组成的。之所以将这种形态称为平头顶部形态和平头底部形态，是因为这些蜡烛线的端点就 像镊子腿一样平齐。
