--- a/src/mdx/trader/蜡烛图技术/14-捉腰带线.mdx
+++ b/src/mdx/trader/蜡烛图技术/14-捉腰带线.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 捉腰带线
 捉腰带线是由单独一根蜡烛线构成的。捉腰带形态的日文名称来自相扑运动的一个术语:yorikiri。这个术语的意思是“抓着对手的腰带，将他推出圈外”。
