--- a/src/mdx/trader/蜡烛图技术/15-三只乌鸦.mdx
+++ b/src/mdx/trader/蜡烛图技术/15-三只乌鸦.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 三只乌鸦
 连续出现了三根依次下降的黑色蜡烛线
