--- a/src/mdx/trader/蜡烛图技术/15-向上跳空两只乌鸦.mdx
+++ b/src/mdx/trader/蜡烛图技术/15-向上跳空两只乌鸦.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 向上跳空两只乌鸦
 它很罕见。“向上跳空”指的是图示的小黑色实体与它们之前 的实体(第一个小黑色实体之前的实体，通常是一根长长的白色实 体)之间的价格跳空。在图示的形态中，两个黑色的小实体自然就是 “两只乌鸦”。两个黑色的小实体好像是栖立在高高的树枝上的两只 乌鸦，不祥地向下凝视着。从这个形象的比喻来看，显而易见，这是 一种看跌的价格形态。在理想的向上跳空两只乌鸦形态中，第二个黑 色实体的开市价高于第一个黑色实体的开市价，并且它的收市价低于第一个黑色实体的收市价。
