--- a/src/mdx/trader/蜡烛图技术/16-白色三兵挺进.mdx
+++ b/src/mdx/trader/蜡烛图技术/16-白色三兵挺进.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 白色三兵挺进形态
 与三只乌鸦形态相对的形态。
