--- a/src/mdx/trader/蜡烛图技术/17-三山形态-三川形态.mdx
+++ b/src/mdx/trader/蜡烛图技术/17-三山形态-三川形态.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 三山形态-三川形态
 在蜡烛图技术中，还有一些较长期的顶部反转形态和底部反转形态，
