--- a/src/mdx/trader/蜡烛图技术/18-反击线形态.mdx
+++ b/src/mdx/trader/蜡烛图技术/18-反击线形态.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 反击线形态
 当两根颜色相反的蜡烛线具有相同的收市价时。
