--- a/src/mdx/trader/蜡烛图技术/19-圆形顶部-平底锅底部.mdx
+++ b/src/mdx/trader/蜡烛图技术/19-圆形顶部-平底锅底部.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 圆形顶部
 市场逐步形成向上凸起的圆弧状图案，在这个过程中，通常出现的是一些较小的实体。最后，当市场向下跳空时，就证明圆形顶部形态已经完成。这一形态与西方 的圆形顶部形态是相同的。不同的是，在日本的圆形顶部形态中，应当包含一个向下跳空，作为市场顶部的附加验证信号。
