--- a/src/mdx/trader/蜡烛图技术/20-塔形顶部-塔形底部.mdx
+++ b/src/mdx/trader/蜡烛图技术/20-塔形顶部-塔形底部.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 塔形顶部-塔形底部
 在西方的技术分析术语中，与塔形反转形态最接近的对应形态，要数长钉形态，或者说V形反转形态。在长钉反转形态中，市场原先处在强劲的趋势过程中，突然，市场掉转方向，形成了方向相反的新趋势。
