--- a/src/mdx/trader/蜡烛图技术/22-上升-下降.mdx
+++ b/src/mdx/trader/蜡烛图技术/22-上升-下降.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 上升三法和下降三法
 这两类形态均属于持续形态。也就是说，一旦看涨的上升三法形态完成后，之前的趋势应当恢复，行情继续走高。相应地，在看跌的下降三法形态完成后，之前的下降趋势继续有效。
