--- a/src/mdx/trader/蜡烛图技术/23-分手线.mdx
+++ b/src/mdx/trader/蜡烛图技术/23-分手线.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 分手线
 如图7.31所示的分手线形态也是由两根颜色相反的蜡烛线组成的，但是同反击线形态不同的是，分手线的两根蜡烛线具有相同的开市价。
