--- a/src/mdx/trader/蜡烛图技术/24-蜡烛图与交易量.mdx
+++ b/src/mdx/trader/蜡烛图技术/24-蜡烛图与交易量.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 交易量
 交易量是市场发出的最重要的行情线索之一
