--- a/src/mdx/trader/蜡烛图新解/00-节选.mdx
+++ b/src/mdx/trader/蜡烛图新解/00-节选.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 “市场参与者的心理、筹码的供需状况，以及买卖双方的相对强弱，都反映在某一单根蜡烛线或数根蜡烛线的组合中。”
 
