--- a/src/mdx/trader/蜡烛图新解/01-实体.mdx
+++ b/src/mdx/trader/蜡烛图新解/01-实体.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 实体
 在日本蜡烛图中，即使是单根蜡烛图也有其深意。考察市场活力的第一个线索便是实体的长度与颜色。对于日本交易员来说，实体部分是价格走势的本质部分，这是蜡烛图技术的关键优势所在，只需根据实体的长度与颜色，即可掌握多空双方的相对力量。
