--- a/src/mdx/trader/蜡烛图新解/02-纺锤线.mdx
+++ b/src/mdx/trader/蜡烛图新解/02-纺锤线.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 纺锤线
 小实体表示多空双方正处于拉锯战中，供需状况相对长实体而言比较均衡。
