--- a/src/mdx/trader/蜡烛图新解/03-十字星.mdx
+++ b/src/mdx/trader/蜡烛图新解/03-十字星.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 交易时段的开盘价与收盘价相等（或几乎相等）
 如果交易日的开盘价与收盘价接近，但不完全相等，何种条件下才可以将其视为十字星？方法之一是将它与最近几个交易日的价格变动做一个比较。如果有许多根实体很小的蜡烛线，则近乎十字星的这根蜡烛并没有什么特殊的意义，因为其他交易日也出现了这么多小实体蜡烛或者十字星。
