--- a/src/mdx/trader/蜡烛图新解/04-上下影线.mdx
+++ b/src/mdx/trader/蜡烛图新解/04-上下影线.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 上下影线
 在蜡烛图中，实体被认为是最重要的部分，但上下影线的位置与长度也会透露大量信息。因此，在分析市场背后的心理时，也应该考虑上下影线的位置与长度。
