--- a/src/mdx/trader/蜡烛图新解/05-锤子线.mdx
+++ b/src/mdx/trader/蜡烛图新解/05-锤子线.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 前言
 在本节讨论的单一蜡烛包括锤子线、吊颈线与流星线，它们都有很长的上影线或下影线，但是实体都很小，而且都接近蜡烛的高点或低点。如果使用蜡烛图帮助决策，这些蜡烛尤其重要。
