--- a/src/mdx/trader/蜡烛图新解/06-流星线.mdx
+++ b/src/mdx/trader/蜡烛图新解/06-流星线.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 流星线的上影线很长，实体很小且接近蜡烛线的低点(见图3-11)
 如果说锤子线的长下影线是个看多信号，那么流星线的长上影线就是个看空信号。这根长长的上影线，代表空方有能力让价格从高位急挫而下。
