--- a/src/mdx/trader/蜡烛图新解/07-乌云盖顶.mdx
+++ b/src/mdx/trader/蜡烛图新解/07-乌云盖顶.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 乌云盖顶-上涨概率很小
 以我个人的经验，乌云盖顶的发生频率高于刺穿形态，其部分原因可能与华尔街的一句名言有关：“因贪婪而进场，因恐惧而出场。”贪婪与恐惧，两者虽然都是非常强烈的情绪，但恐惧更易造成行情的剧烈波动。
