--- a/src/mdx/trader/蜡烛图新解/11-黄昏星.mdx
+++ b/src/mdx/trader/蜡烛图新解/11-黄昏星.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 黄昏星
 如图3-63所示，黄昏星由三根蜡烛线构成。这个形态的判断标准是：
