--- a/src/mdx/trader/蜡烛图新解/12-启明星.mdx
+++ b/src/mdx/trader/蜡烛图新解/12-启明星.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 启明星
 图3-70 是典型的启明星形态，构成这种形态的三根蜡烛线的实体不相互触及。将它们组成合成蜡烛线来考察，可以发现：第三根蜡烛线的收盘价上插第一根黑线实体越高，合成蜡烛线的下影线便愈长，因此，形态的多头气势也显得越强。
