--- a/src/mdx/crypto/meme.mdx
+++ b/src/mdx/crypto/meme.mdx
@@ -1,5 +1,5 @@
-import ImageRender from '../ImageRender';
-import HighlightText from '../HighlightText';
+import ImageRender from '../../components/ImageRender';
+import HighlightText from '../../components/HighlightText';
 
 ## 世界资产排名
 [8marketcap](https://8marketcap.com/)
