--- a/src/mdx/trader/蜡烛图技术/11-星线-黄昏星.mdx
+++ b/src/mdx/trader/蜡烛图技术/11-星线-黄昏星.mdx
@@ -1,4 +1,4 @@
-import ImageRender from '../../ImageRender';
+import ImageRender from '../../../components/ImageRender';
 
 ## 黄昏星是启明星的反面对等形态，在顶部，是看跌的。
 原则上说，在黄昏星形态中，首先在第一根实体与第二根实体之间，应当形成价格跳空;然后在第二根实体与第三根实体之间，再形成另一个价格跳空。但是，正如前面关于启明星的部分曾经详细介绍的那样，上述第二个价格跳空并不常见，而且对本形态的成功来说可有可无，不是必要条件。本形态的关键之处在于第三天的黑色实体向下穿入第一天的白色实体的深浅程度。
