--- a/src/mdx/thinking/invest.mdx
+++ b/src/mdx/thinking/invest.mdx
@@ -318,7 +318,80 @@ import HighlightText from '../../components/HighlightText';
 
 利息的来源就是你卖出期权的权利金，高卖就是卖call。
 
-段永平作为拼多多股东，手里有大量的股票现货仓位，就会不断选择卖call，去年他曾晒单卖call拼多多一次赚了340万刀。
+
+## 卖方本质就是承接风险而提高了成功概率，加上又牺牲了收益，所以做卖方最好做短线，同时严格风控就行了
+这是机构的玩法，普通人跟不上，段永平作为拼多多股东，手里有大量的股票现货仓位，就会不断选择卖call，去年他曾晒单卖call拼多多一次赚了340万刀。
+
+### 劝退所有形式的期权交易?
+https://www.zhihu.com/question/60003550/answer/104100426625
+
+市场博弈的本质是人。买卖双方，都是靠着心中的“想法”“决定”来下单的。
+
+前一秒，大家还信心十足要追高加仓 nvda，后一秒就因为一个 deepseek 争先恐后抛售（当然也有前一秒犹豫此刻冲进去抄底的）。
+
+现在发达的各种量化交易和衍生品并没有抵消“人”这个终极因素，他们只是起到了减小和放大市场波动的作用而已。市场因人而存在，因不确定而存在。我做了几年纯期权然后放弃的一大部分原因，
+
+就是因为期权的本质似乎是在不停地用复杂的数学工具逃避“人”这个博弈的本质。做正股本身已经很难了，做期权就意味着还要同时考虑更多更复杂的因素，给交易难上加难。
+
+<HighlightText color='red'>
+首先我们应该知道，以现金为担保的卖 put 风险比做正股更低。然而我们也要搞清楚，开出来的这笔卖单意味着什么，赚这笔钱的代价是什么，这样才能明确卖 put 是不是真的适合我们。
+</HighlightText>
+
+我举个例子。现在有一支股票股价 110，我打算买正股抄底，心理预期的抄底价是 100，于是我以我的现金为担保，卖出一个月以后 strike（行权价）100 的 put。
+
+假如这个世界没有期权这个东西存在，我们想做的其实就是挂了一个 100 的买单对吧。也就是说，股价没跌到 100，我们没有买入；股价跌破 100，我们成功买入。非常直白的道理。
+
+而卖put呢，则是在sell to open的时候，就已经把合约金，比方说 200 刀，打给我们了。然后接下来等 1 个月到期的时候，看股价跌破 100 了没；没跌破 100，期权作废，200 刀稳稳赚走，我们也没有买入任何正股；如果妥妥跌破 100 了，比如股价 95，那么期权到期行权，我们拿着成本 100 买入的正股，外加 200 刀期权的合约金。
+
+以上都是卖 put 好的一面。
+
+<HighlightText color='red'>
+负面：
+</HighlightText>
+
+股票长期横盘在 102，某天一瞬间突然跌破 100，打到 98，然后迅速反弹到 100 以上，接下来开启一大段涨幅，在一年中涨到了 200。
+
+那么卖 put 的结局就是，我们全程只赚到了 200 刀合约金，并没有成功抄底到我们想要的正股，后面那段 100-200 的涨幅，就跟我们毫无关系了。
+
+<HighlightText color='blue'>
+这就是卖 put 的代价，也就是我们赚的那 200 刀，背后交换出去的东西。
+</HighlightText>
+
+显然卖 put 比持有正股风险更低，但通过以上的讨论就可以看到，更低的风险，一定伴随着更低的收益。
+- 在连续下跌的走势中卖 put，相当于打折抄底同样价格的正股；
+- 但在 v 型行情里卖 put，就要面临着拿不到正股的风险。
+- 卖 covered call 也是同样的道理：在连续上涨的行情中卖 covered call 相当于更贵一点卖出正股，但遇到 ^ 型行情，就会出现正股没卖出去的情况。
+
+<CodeBlock>
+```text
+这就是我劝退期权的原因，纯属于给自己增加难度，自虐行为。本来通过加仓减仓正股就能办完的事，有了期权，交易反而变复杂了，不好弄了。
+```
+</CodeBlock>
+
+- 举个例子，有个下跌的股票现在价格 120 块钱，我们挂出 100 块钱的限价单想要抄底。在股票跌到 110 块钱时，这家公司突然爆出巨大的利空消息，导致我们对这家公司长期的基本面失去信心，我们决定放弃买它的股票，于是就可以直接取消掉限价单，然后把钱投资到别的股票上去。全程零亏损，资金灵活度拉满。
+
+- 但如果我们当初是卖 cash-secured put 抄底，卖出的期权价格是 500 块钱一手，等股票股价从 120 跌到 110 时，这时候 close 掉这个期权可能要花 1000 块钱了，我们此时产生了500 块钱的浮亏。于是，我们要么亏 100% 的权利金平仓期权，要么祈祷这家公司在期权到期前股价不要跌到行权价之下，要么硬着头皮接手这家基本面有雷的公司。
+
+- 卖 covered call 也是类似的道理。假设我们看空某只正在上涨的股票想要卖在人声鼎沸时，但是不直接挂限价单卖正股，而是卖 covered call。在卖出的期权到期之前，如果我们突然发现这只股票其实基本面真的特别好，值得长持，但这段时间股价已经上升许多了（虽然还没有上升到我们的目标卖出价），那么仅仅 close 掉这单 covered call 就可能需要亏很多钱，而限价单直接取消掉就行了。
+
+<HighlightText color='blue'>
+要明白，在充满着不确定性的市场中，灵活性是我们散户为数不多的优势之一。
+</HighlightText>
+
+评论：
+- 比较认同说的一些内容，比如卖put会错失掉正股抄底的部分。但是也有不同的看法，就我个人而言，我已经操作了几年，一般我会根据自己仓位情况卖适当比例的put/call，然后期权金部分算起来近几年年化也会有个20到30+就OK了，风险就是错失了大行情就是了；
+
+评论：
+- 卖期权最好的方法是时间价值啊，就是随着时间的流逝自动挣钱。而且大部分股票半年或者季度atm期权年化收益率都接近20%多的有30-40%的年化收益率
+
+```
+回答：
+纸上得来终觉浅，实盘一段时间感受一下吧，亲身体会一下这份“确定性收益”背后的坑在哪里。
+只提醒一点，我见过大量案例，散户最容易犯的错误就是在股票高位卖put，比如对着140的nvda卖put。
+```
+
+评论：
+- 期权自带杠杆，但是比期货合约风险小，而对一般人来说期权最好的用法是如果长期看好某家公司可以直接leapscall，比正股赚得多
 
 ## A股
 A股怎么走？
